ASSERTION FAILED: length > butterfly->vectorLength() in JSObject::ensureLengthSlow(). https://bugs.webkit.org/show_bug.cgi?id=187060 <rdar://problem/41452767>

Reviewed by Keith Miller.

JSTests:

* stress/regress-187060.js: Added.

Source/JavaScriptCore:

JSObject::ensureLengthSlow() may be called only because it needs to do a copy on
write conversion.  Hence, we can return early after the conversion if the vector
length is already sufficient to cover the requested length.

* runtime/JSObject.cpp:
(JSC::JSObject::ensureLengthSlow):


Canonical link: https://commits.webkit.org/202308@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233217 268f45cc-cd09-0410-ab3c-d52691b4dbfc